(03/06/2008)

*** Added support for host_types attribute (patch from benc)

(02/28/2008)

*** The previous axis update had a bug with the UUID generator.
    This update fixes that.

(02/25/2008)

*** Updated axis and wsrf jars to fix a scalability problem
    with notifications.

(02/11/2008)

*** Updated gram jars to 4.0.6 plus a scalability patch.

(02/06/2008)

*** Slightly better (I believe) error message propagation from
    GRAM. Unfortunately the exact inner workings of the WS-GRAM
    fault types don't seem to match any existing model I know of, 
    so the whole thing is a bit of a guess.

(08/20/2007)

*** Updated to use new redirection stuff

(05/20/2007)

*** Corrected instances in which cleanup is done

(05/18/2007)

*** Failure to destroy a resource causes a warning only if the
    job is completed, but not when the submission process fails.
	It's impossible (I can't figure out an easy way with my 
	current knowledge) to know whether the submit call has 
	succeeded in creating the resource or not.
	
*** Don't clean up after a failure. WS-GRAM seems to do that
    automatically
	
*** Removed a spurious failure state change

(05/17/2007)

*** Fixed flow issues when canceling a job

*** Fixed a bug that could cause a NPE if WS-GRAM would report a
    failed job without an attached fault.
	
*** Updated WS-GRAM jars to 4.0.4.


-------------------------------2.4---------------------------------

(11/24/2006)

*** Set status to failed if the exit code is not 0

(10/18/2006)

*** Attempt to fix handling of status notifications. There is some
	oddness in jobs having no initial status (which could cause
	NPEs on anything that would query details of the status)

(04/12/2006)

*** Use the new spec.isDelegationEnabled()

*** Fixed boot crash when no ip set in cog.properties

*** Some cleanups

(10/14/2005)

*** Committed an updated wsrf_core jar which fixes the following:
	http://bugzilla.globus.org/globus/show_bug.cgi?id=3813